--- a/aa/build.gradle
+++ b/aa/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'io.reactivex:rxjava:1.1.5'
+    compile 'io.reactivex:rxandroid:1.2.0'
     testCompile 'junit:junit:4.12'
 }
