--- a/suishouji/src/main/AndroidManifest.xml
+++ b/suishouji/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".MainActivity"
+		<activity android:name=".main.view.MainActivity"
 			android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation"
 			android:windowSoftInputMode="stateVisible|adjustPan" />
 		<activity android:name=".TransactionTabActivity"
